archives and views caching

--- a/blog/templates/blog/archive_date_detail.html
+++ b/blog/templates/blog/archive_date_detail.html
@@ -1,5 +1,5 @@
 {% extends 'blog/post_detail.html' %}
 
 {% block page_top_title %}
-    [Archive] {{ post.title }}
+    [Archives] {{ post.title }}
 {% endblock page_top_title %}
