--- a/blog/templates/blog/includes/featured_posts.html
+++ b/blog/templates/blog/includes/featured_posts.html
@@ -44,3 +44,40 @@
         </div>
     {% endfor %}
 </div>
+
+{% comment %} {% if featured %}
+    <div id="carouselExampleControls" class="carousel slide my-2" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            {% for post in featured %}
+                <div class="carousel-item{% if forloop.first %} active{% endif %}">
+                    <div class="card shadow h-100">
+                        <div class="card-header">
+                            <strong>
+                                <a class="card-link" href="{{ post.categories.first.get_absolute_url }}">{{ post.categories.first|capfirst }}</a>
+                                <span class="d-inline-block text-muted">
+                                    • <span class="fst-italic">Featured Post</span>
+                                </span>
+                            </strong>
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title text-word-wrap mb-0">{% firstof post.featured_title post.title %}</h3>
+                            <div class="mb-0">{% include 'blog/includes/post_dates.html' %}</div>
+                            <p class="mb-auto">{{ post.description }}</p>
+                        </div>
+                        <div class="card-footer">
+                            <a class="card-link" href="{{ post.get_absolute_url }}">Continue Reading</a>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+{% endif %} {% endcomment %}
