--- a/blog/templates/blog/includes/post_offcanvas.html
+++ b/blog/templates/blog/includes/post_offcanvas.html
@@ -7,7 +7,7 @@
     <div class="offcanvas-body">
         <h6>General Information</h6>
         <p>
-            <a href="{% url 'accounts:profile' slug=post.author.slug %}">
+            <a class="card-link" href="{% url 'accounts:profile' slug=post.author.slug %}">
                 Author:
                 {{ post.author }} -
                 {% if post.author.is_superuser %}
