--- a/blog/templates/blog/links_list.html
+++ b/blog/templates/blog/links_list.html
@@ -1,3 +1,3 @@
 {% for url in urls %}
-    <a class="nav-link" href="{{ url.get_absolute_url }}">{% firstof url.title url.featured_title %}</a>
+    <a class="nav-link{% if url.get_absolute_url in context.request.path_info %} active{% endif %}" href="{{ url.get_absolute_url }}">{% firstof url.title url.featured_title %}</a>
 {% endfor %}
